force-app/main/default/objects/Fire_Sensor_Data__dlm/fields/Camera_Details__c.field-meta.xml
<CustomField>
    <fullName>Camera_Details__c</fullName>
    <label>Camera Details</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Camera Details</labelOverride>
        <masterLabel>Camera Details</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>