force-app/main/default/objects/Fire_Sensor_Data__dlm/fields/co_ppm__c.field-meta.xml
<CustomField>
    <fullName>co_ppm__c</fullName>
    <label>co_ppm</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>co_ppm</labelOverride>
        <masterLabel>co_ppm</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>