force-app/main/default/objects/Fire_Sensor_Data__dlm/fields/fire_detected__c.field-meta.xml
<CustomField>
    <fullName>fire_detected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>fire_detected</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>fire_detected</labelOverride>
        <masterLabel>fire_detected</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>