force-app/main/default/objects/Fire_Sensor_Data__dlm/fields/sensor_id__c.field-meta.xml
<CustomField>
    <fullName>sensor_id__c</fullName>
    <label>sensor_id</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>sensor_id</labelOverride>
        <masterLabel>sensor_id</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>