force-app/main/default/objects/Fire_Sensor_Data__dlm/fields/smoke_ppm__c.field-meta.xml
<CustomField>
    <fullName>smoke_ppm__c</fullName>
    <label>smoke_ppm</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>smoke_ppm</labelOverride>
        <masterLabel>smoke_ppm</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>