force-app/main/default/objects/Fire_Sensor_Data__dlm/fields/temperature_celsius__c.field-meta.xml
<CustomField>
    <fullName>temperature_celsius__c</fullName>
    <label>temperature_celsius</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>temperature_celsius</labelOverride>
        <masterLabel>temperature_celsius</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>